--- a/style.css
+++ b/style.css
@@ -31,19 +31,28 @@ li {
   text-transform: uppercase;
 }
 
+.container.spin,
+nav.spin {
+  transform: rotateZ(-20deg);
+}
+
 .container {
   padding: 20px 0;
   width: 100vw;
   max-width: 1100px;
   position: relative;
   transform-origin: top left;
-  /* transform: rotateZ(-20deg); */
+  transition: all 0.4s;
 }
 
 .circle-container {
   position: absolute;
   top: -100px;
   left: -100px;
+}
+
+.circle.spin {
+  transform: rotateZ(-180deg);
 }
 
 .circle {
@@ -53,7 +62,7 @@ li {
   width: 200px;
   border-radius: 50%;
   position: relative;
-  /* transform: rotateZ(-180deg); */
+  transition: all 0.4s;
 }
 
 .circle button {
@@ -82,7 +91,7 @@ nav {
   background-color: #333;
   left: -400px;
   transform-origin: top right;
-  /* transform: rotateZ(-20deg); */
+  transition: all 0.4s;
 }
 
 nav ul {
